Delete account api completed
