# routes/api.php
@@ -59,4 +59,5 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('update/profile', [AuthController::class, 'updateProfile']);
     Route::get('notifications', [NotificationsController::class, 'index']);
     Route::get('notification/{id}/delete', [NotificationsController::class, 'delete']);
+    Route::get('delete/account', [AuthController::class, 'deleteAccount']);
 });
